created email form

--- a/main/templates/email.html
+++ b/main/templates/email.html
@@ -1,3 +1,8 @@
 <html>
-HEY CAMILA
+  <form>
+    Email:<br>
+    <input type="text" name="Email" value="testing ">  <!--figure out what a value is so that you don't lose your mind-->
+    <input type="submit" value="Submit">
+  </form>
+
 </html>
