--- a/main/templates/email.html
+++ b/main/templates/email.html
@@ -1,8 +1,58 @@
 <html>
-  <form>
-    Email:<br>
-    <input type="text" name="Email" value="testing ">  <!--figure out what a value is so that you don't lose your mind-->
-    <input type="submit" value="Submit">
-  </form>
+  <head>
+    <title>Syzygy Email</title>
+   </head>
+<style>
+input[type = text] {
+    width: 25%;
+     text-align: center;
+     border-radius: 25px;
+     padding: 20px;
+     width: 500px;
+     height: 50px;
+}
+
+input[type=text]:focus {
+    border-radius: 25px;
+    border: 5px  solid #F25E30;
+}
+
+input[type=submit]{
+    border-radius: 25px;
+    background: solid #FFFFFF;
+    padding: 5px; 
+    width: 100px;
+    height: 50px;
+
+}
+
+input {
+  font-size: 110%;
+}
+
+form {
+    text-align: center;
+    font-size: 110%;
+    font-color: #FFFFFF;
+    font: arial, sans-serif;
+}
+
+body {
+  font-size: 125%;
+  font-color: #FFFFFF;
+  font: arial;
+  background-color: #933A2A
+}
+
+</style>
+<body>
+  <center>
+    Enter email here: <br>
+    <form>
+     <input type="text" name="email" value="example@example.com"><br>
+     <input type="submit" value="Submit">
+    </form>
+  </center>
+</body>
 
 </html>
