--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -57,6 +57,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="https://www.redbubble.com/people/Syzygyplus/shop">Shop</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#resources">Resources</a>
             </li>
             <li class="nav-item">
