--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -68,6 +68,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./invite">Join Us</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -149,100 +152,87 @@ Our mission is to create a space where people from all backgrounds can inspire e
     </section>
 
     <section class="p-0" id="members">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Our Members</h2>
+            <hr class="my-4">
+          </div>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/1.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/1.jpg')}}" alt="">
+          <div class="col-lg-3 col-sm-6">
+            <a class="members-box" href="{{ url_for('static', filename='img/members/chill.jpg')}}">
+              <img class="img-fluid" src="{{ url_for('static', filename='img/members/chill.jpg')}}" alt="">
               <div class="members-box-caption">
                 <div class="members-box-caption-content">
                   <div class="member-category text-faded">
-                    Puppy
+                  <!-- potential member title -->
                   </div>
                   <div class="member-name">
-                    Ori Zuerndorfer
+                    Nobel 
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/2.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/2.jpg')}}" alt="">
+          <div class="col-lg-3 col-sm-6">
+            <a class="members-box" href="{{ url_for('static', filename='img/members/fern.jpg')}}">
+              <img class="img-fluid" src="{{ url_for('static', filename='img/members/fern.jpg')}}" alt="">
               <div class="members-box-caption">
                 <div class="members-box-caption-content">
                   <div class="member-category text-faded">
-                    Title
+                  <!-- potential member title -->
                   </div>
                   <div class="member-name">
-                    Member Name
+                   Fernanda 
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/3.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/3.jpg')}}" alt="">
+          <div class="col-lg-3 col-sm-6">
+            <a class="members-box" href="{{ url_for('static', filename='img/members/vik.jpg')}}">
+              <img class="img-fluid" src="{{ url_for('static', filename='img/members/vik.jpg')}}" alt="">
               <div class="members-box-caption">
                 <div class="members-box-caption-content">
                   <div class="member-category text-faded">
-                    Title
+                  <!-- potential member title -->
                   </div>
                   <div class="member-name">
-                    Member Name
+                    Nick
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/4.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/4.jpg')}}" alt="">
+          <div class="col-lg-3 col-sm-6">
+            <a class="members-box" href="{{ url_for('static', filename='img/members/csassa.jpg')}}">
+              <img class="img-fluid" src="{{ url_for('static', filename='img/members/csassa.jpg')}}" alt="">
               <div class="members-box-caption">
                 <div class="members-box-caption-content">
                   <div class="member-category text-faded">
-                    Title
+                  <!-- potential member title -->
                   </div>
                   <div class="member-name">
-                    Member Name
+                    Christina 
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/5.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/5.jpg')}}" alt="">
+          <div class="col-lg-3 col-sm-6">
+            <a class="members-box" href="{{ url_for('static', filename='img/members/booth.jpg')}}">
+              <img class="img-fluid" src="{{ url_for('static', filename='img/members/booth.jpg')}}" alt="">
               <div class="members-box-caption">
                 <div class="members-box-caption-content">
                   <div class="member-category text-faded">
-                    Title
+                  <!-- potential member title -->
                   </div>
                   <div class="member-name">
-                    Member Name
+                    Brian
                   </div>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="members-box" href="{{ url_for('static', filename='img/portfolio/fullsize/6.jpg')}}">
-              <img class="img-fluid" src="{{ url_for('static', filename='img/portfolio/thumbnails/6.jpg')}}" alt="">
-              <div class="members-box-caption">
-                <div class="members-box-caption-content">
-                  <div class="member-category text-faded">
-                    Title
-                  </div>
-                  <div class="member-name">
-                    Member Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
     </section>
     <section id="contact">
       <div class="container">
@@ -257,7 +247,7 @@ Our mission is to create a space where people from all backgrounds can inspire e
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-facebook fa-3x mb-3 sr-contact"></i>
             <p>
-               <a href="https://www.facebook.com/syzygyacademy">facebook.com/syzygyacademy</a>
+               <a href="https://www.facebook.com/syzygysf">facebook.com/syzygysf</a>
             </p>
           </div>
           <div class="col-lg-4 ml-auto text-center">
@@ -269,7 +259,7 @@ Our mission is to create a space where people from all backgrounds can inspire e
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:someone@syzygy.pw">someone@syzygy.pw</a>
+              <a href="mailto:someone@syzygysf.com">someone@syzygysf.com</a>
             </p>
           </div>
         </div>
